--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2474,7 +2474,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  GRE_debt_increase_5:0 "Increase the §YI.F.C.§! Consumer Goods by §R5%§!"
  GRE_debt_increase_10:0 "Increase the §YI.F.C.§! Consumer Goods by §R10%§!"
  GRE_debt_reduce_20:0 "Reduce the §YI.F.C.§! Consumer Goods by §G20%§!"
- GRE_stability_increase_2:0 "Increase §YPolitical Turmoil§! Stability by §G2%§!"
+ GRE_stability_increase_2:0 "Increase §YPolitical Turmoil§! £stability_texticon  Stability by §G2%§!"
  GRE_pp_gain_increase_2:0 "Increase §YPolitical Turmoil§! Political Power Gain by §G2%§!"
  GRE_efficiency_cap_increase_3:0 "Increase §YAgrarian Society§! Production Efficiency Cap by §G3%§!"
  GRE_efficiency_cap_increase_5:0 "Increase §YAgrarian Society§! Production Efficiency Cap by §G5%§!"
@@ -3859,7 +3859,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.6.d:0 "After the fraudulent Elections of Clubs, the entire power was expected to be in hands of the İttihatists. However, as a result of several crisis that took place recently, Liberals started blaming the İttihatist government of Mehmed Said Paşa. As the government embroiled in crisis, Liberal officers that flagged themselves as Saviour Officers organized a coup'd etat, deposing the current Grand Vizier.In the aftermath of the coup, the Sultan already assigned the position to the war hero Ahmed Muhtar Paşa who will be forming an independent, nonpartisan cabinet. Even though Muhtar's government easily passed a vote of confidence thanks to the leader being a distinguished war hero, tensions between the CUP-controlled assembly and the new government had already started. Untill new elections will be held, Muhtar will be assigned with supervising the transition period."
  ottoman.6.a:0 "Hürriyet ve İtilaf!"
  TUR_elections_to_be_held_later_tt:0 "Public elections will be held in early December"
- TUR_elections_to_be_held_later_tt2:0 "Modify §YSecond Constitutional Era§! by\nPolitical Power Gain: §R-5%§!\nParty Popularity Stability Modifier: §R-5.00%§!\n\n"
+ TUR_elections_to_be_held_later_tt2:0 "Modify §YSecond Constitutional Era§! by\nPolitical Power Gain: §R-5%§!\nParty Popularity £stability_texticon  Stability Modifier: §R-5.00%§!\n\n"
  ottoman.7.t:0 "Opposing Officer Take up Arms in Manastır Mountains"
  ottoman.7.d:0 "It's been a known fact that some officers within our ranks do not approve the policies of our government. Yet recent large scale revolts have prompted them to take action. Those who fiercely oppose our government have decided to take up arms and start their own small scale revolts in Manastır Vilayet, using the mountainous terrain as a cover for their operations. While these small scale incursions does not have drastic effects in our continent spanning-empire, This can be proven to be drastic if it were to unite with several other opposition movements brewing within our armed forces."
  ottoman.7.a:0 "Just like the Young Turk Revolution of 1908"
@@ -4263,15 +4263,15 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.102.t:0 "Unintended Consequences"
  ottoman.102.d:0 "As we tried to use the violence between minorities in Macedonia, it came to bite us in the ass. Minorities became relentless and widespread violence quickly became a norm."
  ottoman.102.a:0 "We should crush them in no time"
- TUR_ottoman_greek_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: £political_violence_texticon  Resistance Target: §R+15%§!"
- TUR_ottoman_south_slavic_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: £political_violence_texticon  Resistance Target: §R+15%§!"
+ TUR_ottoman_greek_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: Resistance Target: §R+15%§!"
+ TUR_ottoman_south_slavic_minority_modify_resistance_target_negative_15:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: Resistance Target: §R+15%§!"
  ottoman.103.t:0 "Unintended Consequences"
  ottoman.103.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
  ottoman.103.a:0 "We must turn a blind eye."
  ottoman.104.t:0 "Unintended Consequences"
  ottoman.104.d:0 "Egyptian officials, elite and even the people itself has started to actively oppose our attempts of integrating Egypt. Luckly to us, this opposition wont last forever; but while it does, it will hurt."
  ottoman.104.a:0 "We should've seen that coming."
- TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_50:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §R+5%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+50%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_50:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §R+5%§!\nResistance Growth Speed: §R+50%§!"
  ottoman.105.t:0 "Ottoman-Russian Subjugation"
  ottoman.105.d:0 "The Ottomans and Russians has been enemies for centuries. But recently, in an effort to join the French faction, [TUR.GetName] has agreed with the Russians to become their subjects. With this agreement, Ottomans became a member of [FRA.GetFactionName] and Russians got access to the Mediterranean."
  ottoman.105.a:0 "This was necessary for the survival of our nation."
@@ -4429,15 +4429,15 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.148.t:0 "Unintended Consequences"
  ottoman.148.d:0 "As our governent has moved to eradicate the Albanian terrorism in countryside, the Albanian freedom fighters have started to increase their resistance against our empire."
  ottoman.148.a:0 "We'll increase the gendarmerie."
- TUR_ottoman_albanian_minority_modify_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ALB §YAlbanian Minority§!by\n£political_violence_texticon  Resistance Target: §R+5%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
+ TUR_ottoman_albanian_minority_modify_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ALB §YAlbanian Minority§!by\nResistance Target: §R+5%§!\nResistance Growth Speed: §R+15%§!"
  ottoman.149.t:0 "Unintended Consequences"
  ottoman.149.d:0 "After the enaction of the recent Kurdish assimilation policy, Kurdish tribes in the East have started to revolt and raid neighboring vilalges in an effort to resist against our efforts to integrate them."
  ottoman.149.a:0 "We'll crush the revolts in no time."
- TUR_ottoman_kurdish_minority_modify_resistance_target_negative_10_resistance_growth_negative_15:0 "Modify £ww1_flag_KUR §YKurdish Minority§! by\n£political_violence_texticon  Resistance Target: §R+10%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
+ TUR_ottoman_kurdish_minority_modify_resistance_target_negative_10_resistance_growth_negative_15:0 "Modify £ww1_flag_KUR §YKurdish Minority§! by\nResistance Target: §R+10%§!\nResistance Growth Speed: §R+15%§!"
  ottoman.150.t:0 "Unintended Consequences"
  ottoman.150.d:0 "Though we're not directly trying to integrate them, the local egyptian population saw our policies imposed on them as an effort to reintegrate them to the empire. Because of that, they're intensified their resistance against us."
  ottoman.150.a:0 "Send extra garrisons to the region."
- TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §R+15%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §R+15%§!\nResistance Growth Speed: §R+15%§!"
  ottoman.151.t:0 "Elections of [GetYear]"
  ottoman.151.d:0 "After the troubling previous years of our empire, we can finally hold a peaceful non-violent and free elections within the parliament. Just to be safe, the elections will be cleared from all extremist members, meaning the candidates of this election will be non-partisan and quite neutral in their governance whether they support İttihat ve Terakki Fırkası or not."
  ottoman.151.a:0 "İbrahim Hakkı Paşa wins."
@@ -4454,7 +4454,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.153.d:0 "As the Hizb-i Terakki faction controls a large part of the government, they've managed to appoint their own candidates in the elections. While mostly secular and left-wing, these candidates are still loyal to the İttihatist cause. Just as expected, Hizb-i Terakki faction will further strengthen its place in the party and the government after this election."
  ottoman.153.a:0 "Rıza Bey wins."
  ottoman.153.b:0 "Rıza Tevfik Bey wins."
- TUR_ottoman_armenian_minority_modify_attrition_10_resistance_target_negative_35_resistance_growth_negative_15:0 "Modify £ww1_flag_ARM §YArmenian Minority§!by\nDivision Attrition: §R+10.00%§!\n£political_violence_texticon  Resistance Target: §R+35%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
+ TUR_ottoman_armenian_minority_modify_attrition_10_resistance_target_negative_35_resistance_growth_negative_15:0 "Modify £ww1_flag_ARM §YArmenian Minority§!by\nDivision Attrition: §R+10.00%§!\nResistance Target: §R+35%§!\nResistance Growth Speed: §R+15%§!"
  ottoman.154.t:0 "Unintended Consequences"
  ottoman.154.d:0 "As we've eliminated all the Greeks in Thrace, a problem which was unpredictable at the time has happened. Due to their removal, the economic infrastructure that was initially held by the Greeks are now collapsing, causing an overall decrease in economic activity in the region."
  ottoman.154.a:0 "The regino will recover, eventually..."
@@ -4486,8 +4486,8 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.163.t:0 "Al-Idrisi's Rebellion in Asir"
  ottoman.163.d:0 "A debate in the court over Sharia law reignited Al-Idrisi's rebellion. Alongside the overall instability it'll cause in the region, Al-Idrisi can contact foreigners for support. In an event of a major war, we may have to seek truce with them."
  ottoman.163.a:0 "They're too insignificant to harm to grand Ottoman state."
- TUR_ottoman_arab_minority_modify_resistance_target_10:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £political_violence_texticon  Resistance Target: §R+10%§!"
- TUR_ottoman_arab_minority_modify_resistance_target_10_2:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £political_violence_texticon  Resistance Target: §G-10%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_10:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Resistance Target: §R+10%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_10_2:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Resistance Target: §G-10%§!"
  ottoman.164.t:0 "Elections of [GetYear]"
  ottoman.164.d:0 "With the victory of İttihat-ı Muhammedi Fırkası, the Islamic Conservative party, in this elections, the party needs a leader to shape the party agenda and lead the nation. Different factions within the party striving for the majority in the party. One of these factions are modernists led by Said-i Nursi which takes a renewed look at İslam and on how to promote it. On the other hand, hardliners led by Mustafa Sabri Efendi arguing that the survival of the empire can only be achieved through the elimination of nationalism and proclaiming Muslim unity. The victor is to shape the fate of the empire and Islam to some extend."
  ottoman.164.a:0 "Said-i Nursi wins."
@@ -4503,7 +4503,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.168.t:0 "Unintended Consequences"
  ottoman.168.d:0 "As our integration and Turkification attepmts started targeting our Egyptian vilayets, the local popultion has expressed their discontent quite violently. Our empytian provinces are seeing a chain of uprisings we've never seen from. Unless we crush the revolutionaries, it will spark a bottom to top revolution in Egypt and its break away."
  ottoman.168.a:0 "We'll teach them their place for once and for all."
- TUR_ottoman_arab_minority_modify_attrition_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nDivision Attrition: §R+10.00%§!\n£political_violence_texticon  Resistance Target: §R+15%§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+15%§!"
+ TUR_ottoman_arab_minority_modify_attrition_resistance_target_negative_15_resistance_growth_negative_15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nDivision Attrition: §R+10.00%§!\nResistance Target: §R+15%§!\nResistance Growth Speed: §R+15%§!"
  ottoman.169.t:0 "Al-Qahtaniya Asks to Expand Arab Conscriptions."
  ottoman.169.d:0 "As we've expanded military recruitment to all sides of our empire, it has saw many attention by many minorities. By enlisting in the army, many soldiers have gained various privilages. With such new innovations, an Arab organization Al-Qahtaniya has asked our support to enlist more Arabs. Originally being a literature society under İttihak ve Terakki Fırkası, they're benefited more under our liberal rule. The society also has its paramilitary wing, which has been made official with the expansion of our new army service. Seeking to protect their newly gained rights and to protect the government who brought them these rights, they've asked to reqruit more Arabs for our army."
  ottoman.169.a:0 "It's too risky to give them too much power."
@@ -4528,14 +4528,14 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.175.t:0 "Increased Garrisons in Arab Vilayets"
  ottoman.175.d:0 "As the results of the next ellections are already predictable, Arab populace of the empire has started demonstrations. Fearing if they'll start an uprising after the next elections that without a doubt will be rigged, Turkish ministers have increased garrisons in the Arab vilayets."
  ottoman.175.a:0 "I though we were brothers."
- TUR_ottoman_arab_resistance_target_resistance_decay:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-5%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §G+5%§!"
+ TUR_ottoman_arab_resistance_target_resistance_decay:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §G-5%§!\nResistance Decay Speed: §G+5%§!"
  ottoman.176.t:0 "Early Elections"
  ottoman.176.d:0 "Due to the unpopular opinion of an Arab party ruling the empire, the Turkish parties have united and used any mean to depose our rule. Unfortunately, there's no way for us to win the elections. Now, any progress of ours will be reverted as we've never assumed power."
  ottoman.176.a:0 "This is the lowest point of our democracy."
  ottoman.177.t:0 "Unintended Consequences"
  ottoman.177.d:0 "After the Arabs assumed the leadership of the empire, their new ethnic policies are perceived pretty unpopular by the Turks. Once those who enjoyed full rights under the empire is now seen as second class citizens. For this very reason, Turks have become another minority group in the empire, just like how Arabs used to be."
  ottoman.177.a:0 "A minority in our own land."
- TUR_add_turkish_minority:0 "Modify §YTurkish Minority§! by\n£civ_factory  Local Factories: §R-15%§!\n£political_violence_texticon  Resistance Target: §R-15%§!\n£manpower_texticon  Recruitable Population: §R-15.00%§!"
+ TUR_add_turkish_minority:0 "Modify §YTurkish Minority§! by\n£civ_factory  Local Factories: §R-15%§!\nResistance Target: §R-15%§!\n£manpower_texticon  Recruitable Population: §R-15.00%§!"
  TUR_unlock_minority_turkish_focuses:0 "New §Yfocuses§! will be unlocked to deal with the §YTurkish Minority§!."
  ottoman.178.t:0 "Mehmed Said Paşa Passes Away."
  ottoman.178.d:0 "Mehmed Said Paşa has developed bronchitis in the last previous years. Unfortunately, he has failed to overcome his sickness and passed away recently. With his unfortunate death, we need to find a replacement for him."
@@ -8611,7 +8611,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_england.187.b:0 "We'll go quietly."
  ww1_england.188.t:0 "The Post-War Election"
  ww1_england.188.d:0 "After the end of the Great War, Prime Minister [ENG.GetLeader] has called a general election. It is likely that he will remain in power, despite the Liberal Party losing their majority.... That is, unless the Conservatives feel like breaking the Coalition Ticket"
- ww1_england.188.a:0 "Stability First, Politics Later."
+ ww1_england.188.a:0 "£stability_texticon  Stability First, Politics Later."
  ww1_england.188.b:0 "We have the electoral mandate, so why not?"
  ww1_england.189.t:0 "The Southwest Africa Question"
  ww1_england.189.d:0 "Capturing Southwest Africa from the Germans means one important thing- inheriting the legacy of the Herero Genocide. The Herero people were viciously brutalised by the German regime in the early 1900s in what many are calling 'the first Genocide of the Century', and while most colonial administrations agree the area belongs under British control there are those who sympathise with the tribe and believe we should award it to them."
@@ -13083,7 +13083,7 @@ gre_we_shall_not_perish:0 "We Shall Not Perish"
  ww1_nejd.20.a:0 "Launch a campaign to root them out!"
  ww1_nejd.21.t:0 "Reeling from Kanzan's Aftermath"
  ww1_nejd.21.d:0 "The aftermath of the Battle of Kanzan has left us in a precarious position. Criticism from Mubarak bin Sabah and doubts about Abdulaziz's military leadership have emerged. In a subsequent engagement at Suwaiderah, we reported some success against the Ajman, but the heavy toll, including civilian casualties, has cast a shadow over our actions. Despite efforts at Jubail by our Bani Khalid allies, the Ajman, though battered, managed to escape in good order. Ultimately, the Ajman, victorious at Kanzan, fled to Kuwait and later to southwestern Iraq. Our recent meeting with Percy Cox, alongside Jabir Al Sabah in Basra, has led to an agreement of non-aggression with the Ajman. However, trust remains fragile, and tensions are far from resolved."
- ww1_nejd.21.a:0 "Work Towards Stability and Rebuild Trust"
+ ww1_nejd.21.a:0 "Work Towards £stability_texticon  Stability and Rebuild Trust"
  ww1_nejd.22.t:0 "British Treaty Offer"
  ww1_nejd.22.d:0 "In a momentous development, representatives of the British government have approached us with a significant offer. In the proposed Treaty of Darin, Britain seeks to establish our lands as a protectorate, defining our boundaries and acknowledging our sovereignty. In exchange for our commitment to attack Jabal Shammar and refrain from assaulting British protectorates, they offer us substantial support: recognition as the ruler of Najd and its dependencies, a substantial monetary loan, and a crucial shipment of arms. This treaty could mark a turning point, offering us international recognition and the means to strengthen our position in the region. Our decision on this proposition will shape not only our future but also the geopolitical landscape of the Arabian Peninsula."
  ww1_nejd.22.a:0 "We will gladly accept their generous offer!"
