--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1332,7 +1332,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GER_rupprecht_von_wittelsbach:0 "Rupprecht von Bayern"
  GER_colmar_von_der_goltz:0 "Colmar von der Goltz"
  GER_lepold_von_bayern:0 "Lepold von Bayern"
- GER_friedrich_august_iii:0 "Friedrich August III"
+ GER_friedrich_august_iii:0 "Friedrich August III. von Sachsen"
  GER_gottlieb_graf_von_haeseler:0 "Gottlieb Graf von Haeseler"
  GER_karl_von_bulow:0 "Karl von Bulow"
  GER_ferdinand_von_quast:0 "Ferdinand von Quast"
@@ -1428,6 +1428,10 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GER_karl_trimborn:0 "Karl Trimborn"
  GER_adolf_wild_von_hohenborn:0 "Adolf Wild von Hohenborn"
  GER_otto_von_lossow:0 "Otto von Lossow"
+ GER_friedrich_ii:0 "Friedrich II. von Baden"
+ 
+ SAX_friedrich_august_iii:0 "Friedrich August III."
+ SAX_rudolf_heinze:0 "Rudolf Heinze"
 
  WUR_wilhelm_ii:0 "Wilhelm II."
  
