--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1607,6 +1607,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  command_power_more_than_25:0 "£command_power §Y25§!"
  command_power_more_than_25_blocked:0 "£command_power §R25§!"
  command_power_more_than_25_tooltip:0 "It costs £command_power §Y25§! to take the decision"
+ command_power_more_than_15:0 "£command_power §Y15§!"
+ command_power_more_than_15_blocked:0 "£command_power §R15§!"
+ command_power_more_than_15_tooltip:0 "It costs £command_power §Y15§! to take the decision"
  command_power_more_than_10:0 "£command_power §Y10§!"
  command_power_more_than_10_blocked:0 "£command_power §R10§!"
  war_support_more_than_5:0 "£war_support §Y5§!"
@@ -2063,6 +2066,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_stability_war_support_down:0 "[TUR_minority_stability_war_support_down]"
  TUR_minority_stability_war_support_down_yes:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n"
  TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n"
+ TUR_ban_arab_newspapers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-5%§!\n£compliance_gain_texticon  Compliance Growth Speed: §R-10%§!\n"
+ TUR_forced_labor_in_middle_east_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+15%§!\n"
+ TUR_forced_labor_in_middle_east_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-15%§!\n"
+ TUR_recruit_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n"
 
 
  TUR_minority_local_factories_down:0 "[TUR_minority_local_factories_down]"
@@ -2107,6 +2114,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_local_supplies_for_controller_normal:0 "£supply_texticon  Local Supplies: §G+5%§!\n"
  TUR_minority_local_supplies_for_controller_4:0 "£supply_texticon  Local Supplies: §G+4%§!\n"
  TUR_minority_local_supplies_for_controller_3:0 "£supply_texticon  Local Supplies: §G+3%§!\n"
+ TUR_minority_local_supplies_for_controller_2:0 "£supply_texticon  Local Supplies: §G+2%§!\n"
+ TUR_minority_local_supplies_for_controller_1:0 "£supply_texticon  Local Supplies: §G+1%§!\n"
+
+ TUR_minority_local_supplies_for_controller2_down:0 "[TUR_minority_local_supplies_for_controller2_down]"
  TUR_minority_local_supplies_for_controller_2:0 "£supply_texticon  Local Supplies: §G+2%§!\n"
  TUR_minority_local_supplies_for_controller_1:0 "£supply_texticon  Local Supplies: §G+1%§!\n"
 
