--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1219,6 +1219,7 @@
  FRA_leon_daudet:0 "Léon Daudet"
  FRA_antoine_schwerer:0 "Antoine Schwerer"
  FRA_maurice_barres:0 "Maurice Barrès"
+ FRA_marc_sangnier:0 "Marc Sangnier"
  FRA_nicolas_saclois:0 "Nicolas Saclois"
  FRA_matthieu_abriot:0 "Matthieu Abriot"
  FRA_ernest_monis:0 "Ernest Monis"
