--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -6896,6 +6896,9 @@ FRA_conservatives_and_republican_federation_merge:0 "§3Conservatives§! and §2
  FRA_ww1_center_right_domination:0 "Center-Right Domination"
  FRA_ww1_center_right_domination_desc:0 "The alliance of rights represents all conservative movements, largely rallied by Jacques Piou and his close collaborators. The royalist and nationalist movements secretly attempted to neutralize Piou's leadership in order to take control of the coalition. It will be necessary to lead an internal political campaign intended to put an end to this anti-Republican quarrel."
 
+ FRA_ww1_educational_reform:0 "Educational Reform"
+ FRA_ww1_educational_reform_desc:0 "The stabilization of the new right-wing cartel has made it possible to offer great support to businesses and the working classes, thus leaving us with great room for maneuver to reform the education system."
+
  FRA_ww1_daudet_takeover:0 "Daudet Takeover"
  FRA_ww1_daudet_takeover_desc:0 "The Christian coalition drew its sources from the fight of the republican monarchists of popular action then French action and nationalists. The national project must be oriented around the restoration of more traditional and nationalist values as part of our national influence and our unity as a people."
 
@@ -6905,6 +6908,9 @@ FRA_conservatives_and_republican_federation_merge:0 "§3Conservatives§! and §2
 FRA_ww1_support_monarchist_elements:0 "Support Monarchist Elements"
 FRA_ww1_support_monarchist_elements_desc:0 "The government is now more open about the support it can accept, particularly from convinced restorationists."
 
+FRA_ww1_support_arenberg_mines:0 "Support Arenberg Mines"
+FRA_ww1_support_arenberg_mines_desc:0 "Auguste Louis Albéric d'Arenberg is close to Jacques Piou, a friend since the formation of the "Ralliement des catholiques de France" owning the Compagnie des mines d'Anzin in the north of France. A large regional industry, it can receive additional funding to increase coal mining."
+
 FRA_SFIO_and_radicals_will_oppose_this:0 "\n§R§OSFIO§! and §OIndependant Socialists§! will Strongly Oppose the passage of this law. Even if they do not have a majority in the §Yparliament§! and the §Ysenate§!, they risk provoking an Insurrectional Situation!§!"
 
  FRA_ww1_revise_1905_law:0 "Revise 1905 Law"
@@ -6912,6 +6918,9 @@ FRA_SFIO_and_radicals_will_oppose_this:0 "\n§R§OSFIO§! and §OIndependant Soc
 
  FRA_ww1_ban_sfio:0 "Ban SFIO"
  FRA_ww1_ban_sfio_desc:0 "The numerous security laws have highlighted the danger represented by revolutionary syndicalism, anarchism and all currents of thought opposed to the state. These laws having passed, it is possible to ban political parties promoting these nauseating ideologies. It is very likely that socialists will join less extreme left-wing parties."
+
+ FRA_ww1_rapeal_the_law_of_exile_conservative:0 "Rapeal the Law of Exile"
+ FRA_ww1_rapeal_the_law_of_exile_conservative_desc:0 "The law of exile was an error, it deprived France of charismatic figures making it possible to promote national unity. The withdrawal of this harmful law will allow the return of the Bourbon, Orleans and Bonaparte houses."
 
  FRA_ww1_fund_science_po:0 "Fund ELSP"
  FRA_ww1_fund_science_po_desc:0 "The Free School of Political Sciences (ELSP), colloquially known as “Sciences Po”, is a private French higher education establishment created in 1871 by Émile Boutmy. It trains some of the republic's senior executives, as well as certain major industrialists and politicians. Funding and expanding the activities of this school will enable technological, societal and cultural innovation."
@@ -7049,7 +7058,7 @@ FRA_ww1_cartel_des_droites_desc:0 "The union of the French right is a reality wh
  FRA_ww1_support_napoleon_V_desc:0 "France experienced its greatest hour of glory during the reign of Emperor Napoleon I. This era took us to Germany, Italy and even Russia. We must find this kind of strong leader by supporting the Bonaparte house."
 
  FRA_law_of_exile_retired:0 "Repeal the Law of Exile"
- FRA_law_of_exile_retired_desc:0 "The Law of Exile prevents foreign monarchs from returning to France. This is a law that seeks to only ruin France and deprive the nation of its former glory. This cannot do and the law must be revoked in its entirety. This will enable the houses of §YBonaparte§! and §YOrléans§! to rightfully rule once again."
+ FRA_law_of_exile_retired_desc:0 "§LThe Law of Exile prevents foreign monarchs from returning to France. This is a law that seeks to only ruin France and deprive the nation of its former glory. This cannot do and the law must be revoked in its entirety.\n\nThis will enable the houses of §YBonaparte§!, §YBourbon§! and §YOrléans§! to return to the French territory and participate to politics.§!"
 
  FRA_ww1_naval_experience:0 "Naval Experience"
  FRA_ww1_naval_experience_desc:0 "French naval history is one of the richest in the world and one of the most advanced. Our heavy ships are superior in quality to most of their opponents, if we take out the mighty royal navy. We must take advantage of our past experience in order to develop modern doctrines."
