making french advisors die

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -883,6 +883,7 @@ FRA_sponsor_the_auberge_the_jeunesses:0 "Sponsor the Auberge de Jeunesses"
 FRA_sponsor_the_auberge_the_jeunesses_desc:0 "The law proposed by §YMarc Sangnier§! proposes the creation of dormitories reserved for students to ensure a cheap housing service guaranteed by the state. This educational innovation will allow many families to send their children to study away from home."
 
  FRA_unlock_HLM_focus:0 "Unlock Focus : §YHBM Project§!"
+ character_not_dead:0 "Has not Passed Away"
 
 
  FRA_HBM_law:0 "HBM Law"
