--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1867,6 +1867,14 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_france.420.a:0 "The people voted, Blum"
  ww1_france.420.b:0 "We shouldnt escalate this even more..."
 
+ ww1_france.421.t:0 "Jules Guesdes Died"
+ ww1_france.421.d:0 "Jules Guesdes, eminent politician of the French left, left us on July 28, 1922 in Saint-Mandé. Known for his pro-commune positions and his attachment to collectivist values, he was an icon of revolutionary trade unionism in France."
+ ww1_france.421.a:0 "A figure of our history"
+
+ ww1_france.422.t:0 "Jules Guesdes Died"
+ ww1_france.422.d:0 "Jules Guesdes, eminent politician of the French left, left us on July 28, 1922 in Saint-Mandé. Known for his pro-commune positions and his attachment to collectivist values, he was an icon of revolutionary trade unionism in France."
+ ww1_france.422.a:0 "A figure of our history"
+
  #BELGIUM
  ww1_belgium.1.t:0 "Rape of Belgium"
  ww1_belgium.1.desc:0 "Reports have come in describing the outright barbaric treatment of Belgian civilians by Germans. Anticipating guerrilla attacks from francs-tireurs who don’t actually exist, German commanders have taken civilian hostages as they pass through towns and villages, then shoot the hostages in groups whenever German soldiers are killed.\n\nBlamed on shadow guerrillas, the usual stray bullets and friendly fire incidents have already resulted in hundreds of murdered Belgians, and for reasons that remain unclear, the historic city and university of Louvain were burned.\n\nJust like looting and murder, rape was widespread."
