--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8193,6 +8193,7 @@ USA_roosevelt_klan:0 "Tackling the Second Klan"
 USA_roosevelt_klan_desc:0 "Fueled by a rise of §cConser§!§qvative§! populism following Roosevelts election victory, the §qKlan§! has made a second appearence, painting an image of themselfves as a right wing, populist, white, and protestant group that has no intentions on breaking the law.\n\nWe know better then this though, the first Klan was a blatan militia group founded on the idea of overthrowing Republican governments in the south, and this new Klan is hardly any better. The new Klan has made it clear their opposition to us, and their antics are proving to bring us many difficulties. As such, we must nip this new Klan in the bud, before they radicalize or mobilize enough people to take down our presidency through the ballot box."
 USA_second_klan:0 "The second Klan has formed."
 USA_urbanize_washington:0 "Build up Seattle"
+USA_drum_up_support_for_new_freedom:0 "Drum Up Support for New Freedom"
 USA_urbanize_oregon:0 "Incentivize Migration to Oregon"
 USA_urbanize_california:0 "Foster Urbanization of Californian Coast"
 USA_protect_steel_industry:0 "Protect Steel Industry"
@@ -8200,6 +8201,8 @@ USA_protect_steel_industry:0 "Protect Steel Industry"
  USA_congress_investigation_of_the_army_desc:0 "The state of the American army is abysmal, to say the least. With §Routdated tactics§!, §Ra lack of men§!, §Routdated equipment§!, and §Rlittle funding§!, the army is in a pitiful state. To show just how bad it has gotten, several army officals have gotten together to show §5Congress§! just how bad it is in an attempt to lobby for more army funding."
 USA_the_final_report:0 "The Final Report"
 USA_the_final_blow:0 "Oust Jose Mandriz"
+elect_rep:0 "Electable 1912 Presidents include §YWilliam Taft§! §YTheodore Roosevelt§! and §YJoseph Cannon§!"
+elect_dem:0 "Electable 1912 Presidents include §YWoodrow Wilson§! §YChamp Clark§! and one §YSecret Canidate§!"
  USA_army_investigation_state_very_poor:0 "§RVery Poor§!"
 USA_tungsten_development_in_idaho:0 "Tungsten Development in Idaho"
 USA_tungsten_development_in_nevada:0 "Tungsten Development in Nevada"
