--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8216,6 +8216,7 @@ USA_louisiana_railway:0 "Louisiana Railway"
 USA_mississippi_textiles:0 "Improve Mississippi Textiles"
 
 ### Taft
+USA_re_enforce_latin:0 "American Companies Require Government Reassurance"
 USA_deals_with_lobbyists:0 "Deal with Lobbyists"
 USA_fight_lobbyists:0 "Fight Lobbyists"
 USA_workers_BUST:0 "Progressives Demand Better Workers Rights"
