working on localisation

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2051,8 +2051,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_improve_albanian_garrisons_desc:0 "Albania has been experiencing high and frequent levels of rebellions in the past years. To safeguard our control in the region, we have to better equip our garrisons to show up a more effective force against the rebels."
  TUR_improve_albanian_garrisons_tt2:0 "£political_violence_texticon  Resistance Target: §G-10%§!\n"
  TUR_improve_albanian_garrisons_tt3:0 "£political_violence_gain_texticon  Resistance Growth Speed: §G-5%§!\n"
- TUR_deport_greeks:0 "Deport Greeks in [FROM.GetName]"
- TUR_deport_greeks_desc:0 "There are several towns and villages that accompany a large Greek population. By deporting them and giving their properties to Muslims, we can continue nationalizing our economy."
  TUR_add_armenian_minority:0 "Add £ww1_flag_ARM  §YArmenian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_minority_resistance_target_down][TUR_minority_army_defence_factor_down][TUR_minority_enemy_local_supplies_down][TUR_minority_recruitable_population_down]\nModify the state's modification to §YSeparatist Sentiments§! by\n[TUR_minority_stability_down]£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
  TUR_add_greek_minority:0 "Add £ww1_game_rule_flag_GRE  §YGreek Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_minority_local_factories_down][TUR_minority_intel_to_enemies_down][TUR_minority_resistance_target_down][TUR_minority_recruitable_population_down][TUR_minority_local_construction_speed_down]\nModify the state's modification to §YSeparatist Sentiments§! by\n[TUR_minority_stability_down]£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
  TUR_add_south_slavic_minority:0 "Add £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_minority_resistance_target_down][TUR_minority_recruitable_population_down][TUR_minority_resistance_decay_down][TUR_minority_required_garrison_factor_down]\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n"
@@ -2065,12 +2063,38 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_level_down:0 "Modify [TUR_get_state_minority] by\n"
  TUR_minority_stability_war_support_down:0 "[TUR_minority_stability_war_support_down]"
  TUR_minority_stability_war_support_down_yes:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n"
+ TUR_integrate_syrian_vilayets:0 "Integrate [FROM.GetName]"
+ TUR_integrate_syrian_vilayets_desc:0 "While Syrian vilayets have been an integral part of our empire for centuries, there are still some parts of these vilayets that doesnt recognize our legitimate rule. If we manage to increase popularity of our rule in these vilayets, we can easily integrate them."
+ TUR_pro_ottoman_propaganda_for_shia:0 "Pro-Ottoman Propaganda for Shia in [FROM.GetName]"
+ TUR_pro_ottoman_propaganda_for_shia_desc:0 "The Shia Muslim population in our Sunni empire has long been marginalized. By emphasizing on our united Muslim identity, we can mitigate the effects of the sectarian divisions."
  TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n"
+ TUR_tax_collection_in_middle_east:0 "Tax Collection in [FROM.GetName]"
+ TUR_tax_collection_in_middle_east_desc:0 "Centuries of neglection has left tax collection in [FROM.GetName] rather inefficient. If we manage to bring modern means of transportation to the region, we can easily improve tax collection methods."
+ TUR_increase_conscription_in_middle_east:0 "Increase Conscription in [FROM.GetName]"
+ TUR_increase_conscription_in_middle_east_desc:0 "Our inability to fully reach out to and integrate [FROM.GetName] has resulted in inefficient recruitment of the population for the army. If we manage to extend our reach to these territories, we can increase the amount of men we can recruit."
+ TUR_surpress_arab_dissent:0 "Surpress Arab Dissent"
+ TUR_surpress_arab_dissent_desc:0 "Our Arab population in [FROM.GetName] has proven to be quite unsatisfied with our rule. In order to protect the integrity of the state, we must purge the territory from any dissent it has under it."
+ TUR_ban_arab_newspapers:0 "Ban Arab Newspapers in the Vilayer of [FROM.GetName]"
+ TUR_ban_arab_newspapers_desc:0 "Arab nationalist newspapers have been getting more and more popular in the last few years. As these newspapers popularize and perhaps even trigger Arab rebellions, the only logical option we have is to entirely outlaw them."
  TUR_ban_arab_newspapers_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£political_violence_texticon  Resistance Target: §G-5%§!\n£compliance_gain_texticon  Compliance Growth Speed: §R-10%§!\n"
+ TUR_forced_labor_in_middle_east:0 "Forced Labor in [FROM.GetName]"
+ TUR_forced_labor_in_middle_east_desc:0 "Lack of development and inefficient government power in [FROM.GetName] results in the region lacking in development. By forming force labor in the region, we can increase the development of the state."
  TUR_forced_labor_in_middle_east_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+15%§!\n"
  TUR_forced_labor_in_middle_east_tt2:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §R-15%§!\n"
- TUR_recruit_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n"
-
+ TUR_recruit_prisoner_conscripts_in_middle_east:0 "Recruit Prisoner Conscripts in [FROM.GetName]"
+ TUR_recruit_prisoner_conscripts_in_middle_east_desc:0 "Surpression of dissent in [FROM.GetName] has resulted in numerous Arab prisoners at our hands. Instead of wasting our precious recourses by imprisoning them, we can put them into use by forming penal battalions."
+ TUR_recruit_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+1.00%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §R-0.10%§!\n"
+ TUR_disband_prisoner_conscripts:0 "Disband Prisoner Conscripts"
+ TUR_disband_prisoner_conscripts_desc:0 "Prisoner Conscripts have proven to be greater of a burden that they're a benefit to us. The only logical action would be to disband them."
+ TUR_disband_prisoner_conscripts_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: [TUR_recruit_prisoner_conscripts_in_middle_east|=2%+]\n\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: [TUR_recruit_prisoner_conscripts_in_middle_east|=2%+]\n"
+ TUR_deport_greeks:0 "Deport Greeks in [FROM.GetName]"
+ TUR_deport_greeks_desc:0 "There are several towns and villages that accompany a large Greek population in [FROM.GetName]. By deporting them and giving their properties to Muslims, we can create an ethnically homogenious society."
+ TUR_destroy_bulgarians:0 "Destroy Bulgarians in [FROM.GetName]"
+ TUR_destroy_bulgarians_desc:0 "There are several towns and villages that accompany a large Bulgarian population in [FROM.GetName]. By destroying their existance in the state, we can create an ethnically homogenious society."
+ TUR_exterminate_armenians:0 "Exterminate Armenians in [FROM.GetName]"
+ TUR_exterminate_armenians_desc:0 "There are several towns and villages that accompany a large Armenian population in [FROM.GetName]. By marching them through desert while effectively decreasing their numbers, we can create an ethnically homogenious society."
+ TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
+ TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
 
  TUR_minority_local_factories_down:0 "[TUR_minority_local_factories_down]"
  TUR_minority_local_factories_normal:0 "£civ_factory  Local Factories: §G+5%§!\n"
